--- a/Riksdagen P1214.ipynb
+++ b/Riksdagen P1214.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "## Riksdagen P1204\n",
-    "Egenskap i WIkidata som bör bytas till GUID\n",
+    "Egenskap i Wikidata som bör bytas till GUID\n",
+    "* [denna notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagen%20P1214.ipynb)\n",
     "* [diskussion P1214](https://www.wikidata.org/wiki/Property_talk:P1214#Repair_needed) \n",
     "* egenskapsförslag [Wikidata:Property_proposal/Riksdagen_person_guid](https://www.wikidata.org/wiki/Wikidata:Property_proposal/Riksdagen_person_guid)\n",
     "* [Riksdagensdata 1991 poster](http://data.riksdagen.se/personlista/?iid=&fnamn=&enamn=&f_ar=&kn=&parti=&valkrets=&rdlstatus=samtliga&org=&utformat=json&sort=sorteringsnamn&sortorder=asc&termlista=)"
