--- a/Open Parking Stockholm using Kepler.ipynb
+++ b/Open Parking Stockholm using Kepler.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,11 +69,11 @@
        "      <th>STREET_NAME</th>\n",
        "      <th>CITY_DISTRICT</th>\n",
        "      <th>PARKING_DISTRICT</th>\n",
-       "      <th>VF_PLATS_TYP</th>\n",
        "      <th>ADDRESS</th>\n",
        "      <th>RDT_URL</th>\n",
-       "      <th>VF_METER</th>\n",
+       "      <th>VF_PLATS_TYP</th>\n",
        "      <th>VF_PLATSER</th>\n",
+       "      <th>VF_METER</th>\n",
        "      <th>VALID_TO</th>\n",
        "      <th>ODD_EVEN</th>\n",
        "      <th>geometry</th>\n",
@@ -82,12 +82,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>LTFR_SERVICEDAG.31041785</td>\n",
-       "      <td>31041785</td>\n",
-       "      <td>2411435</td>\n",
+       "      <td>LTFR_SERVICEDAG.31094366</td>\n",
+       "      <td>31094366</td>\n",
+       "      <td>2387392</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2008-12-17T23:00:00</td>\n",
+       "      <td>2008-03-27T23:00:00</td>\n",
        "      <td>800</td>\n",
        "      <td>1600</td>\n",
        "      <td>måndag</td>\n",
@@ -95,27 +95,27 @@
        "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>15.0</td>\n",
-       "      <td>0180 2008-10330</td>\n",
-       "      <td>Kistvägen</td>\n",
-       "      <td>Gubbängen</td>\n",
+       "      <td>0180 2008-02151</td>\n",
+       "      <td>Sjösavägen</td>\n",
+       "      <td>Bandhagen</td>\n",
        "      <td>&lt;Område saknas&gt;</td>\n",
-       "      <td>Tidsreglerat parkerings-/stoppförbud</td>\n",
-       "      <td>Kistvägen 13 - 17</td>\n",
+       "      <td>Sjösavägen 151 - 149</td>\n",
        "      <td>https://rdt.transportstyrelsen.se/rdt/AF06_Vie...</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>LINESTRING (18.07999 59.26315, 18.07995 59.263...</td>\n",
+       "      <td>LINESTRING (18.04339 59.26578, 18.04352 59.26587)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>LTFR_SERVICEDAG.31041786</td>\n",
-       "      <td>31041786</td>\n",
-       "      <td>2411435</td>\n",
+       "      <td>LTFR_SERVICEDAG.31094367</td>\n",
+       "      <td>31094367</td>\n",
+       "      <td>2387392</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>2008-12-17T23:00:00</td>\n",
+       "      <td>2008-03-27T23:00:00</td>\n",
        "      <td>800</td>\n",
        "      <td>1600</td>\n",
        "      <td>måndag</td>\n",
@@ -123,55 +123,27 @@
        "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>15.0</td>\n",
-       "      <td>0180 2008-10330</td>\n",
-       "      <td>Kistvägen</td>\n",
-       "      <td>Gubbängen</td>\n",
+       "      <td>0180 2008-02151</td>\n",
+       "      <td>Sjösavägen</td>\n",
+       "      <td>Bandhagen</td>\n",
        "      <td>&lt;Område saknas&gt;</td>\n",
-       "      <td>Tidsreglerat parkerings-/stoppförbud</td>\n",
-       "      <td>Herrhagsvägen 132 - Kistvägen 14</td>\n",
+       "      <td>Sjösavägen 127 - 151</td>\n",
        "      <td>https://rdt.transportstyrelsen.se/rdt/AF06_Vie...</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>LINESTRING (18.08065 59.26477, 18.08060 59.264...</td>\n",
+       "      <td>LINESTRING (18.04324 59.26570, 18.04327 59.265...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>LTFR_SERVICEDAG.31042338</td>\n",
-       "      <td>31042338</td>\n",
-       "      <td>2506528</td>\n",
+       "      <td>LTFR_SERVICEDAG.31094562</td>\n",
+       "      <td>31094562</td>\n",
+       "      <td>2383618</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2010-01-14T23:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>600</td>\n",
-       "      <td>måndag</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0180 2009-08409</td>\n",
-       "      <td>Hornsgatan</td>\n",
-       "      <td>Södermalm</td>\n",
-       "      <td>Södermalm</td>\n",
-       "      <td>Tidsreglerat parkerings-/stoppförbud</td>\n",
-       "      <td>Hornsgatan 86</td>\n",
-       "      <td>https://rdt.transportstyrelsen.se/rdt/AF06_Vie...</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>LINESTRING (18.05412 59.31790, 18.05393 59.31788)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>LTFR_SERVICEDAG.31042341</td>\n",
-       "      <td>31042341</td>\n",
-       "      <td>2506987</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2009-12-02T23:00:00</td>\n",
+       "      <td>2008-03-16T23:00:00</td>\n",
        "      <td>800</td>\n",
        "      <td>1600</td>\n",
        "      <td>måndag</td>\n",
@@ -179,63 +151,91 @@
        "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>15.0</td>\n",
-       "      <td>0180 2009-08583</td>\n",
-       "      <td>Getfotsvägen</td>\n",
-       "      <td>Gubbängen</td>\n",
+       "      <td>0180 2008-01403</td>\n",
+       "      <td>Lännäsbacken</td>\n",
+       "      <td>Rågsved</td>\n",
        "      <td>&lt;Område saknas&gt;</td>\n",
-       "      <td>Tidsreglerat parkerings-/stoppförbud</td>\n",
-       "      <td>Getfotsvägen 59 - 56</td>\n",
+       "      <td>&lt;Adress saknas&gt;</td>\n",
        "      <td>https://rdt.transportstyrelsen.se/rdt/AF06_Vie...</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>LINESTRING (18.07632 59.26141, 18.07630 59.261...</td>\n",
+       "      <td>LINESTRING (18.02351 59.25976, 18.02352 59.259...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LTFR_SERVICEDAG.31094563</td>\n",
+       "      <td>31094563</td>\n",
+       "      <td>2383618</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2008-03-16T23:00:00</td>\n",
+       "      <td>800</td>\n",
+       "      <td>1600</td>\n",
+       "      <td>måndag</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0180 2008-01403</td>\n",
+       "      <td>Lännäsbacken</td>\n",
+       "      <td>Rågsved</td>\n",
+       "      <td>&lt;Område saknas&gt;</td>\n",
+       "      <td>Lännäsbacken 5</td>\n",
+       "      <td>https://rdt.transportstyrelsen.se/rdt/AF06_Vie...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>LINESTRING (18.02361 59.25935, 18.02360 59.259...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>LTFR_SERVICEDAG.31041799</td>\n",
-       "      <td>31041799</td>\n",
-       "      <td>2414638</td>\n",
+       "      <td>LTFR_SERVICEDAG.31094564</td>\n",
+       "      <td>31094564</td>\n",
+       "      <td>2383618</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2008-12-17T23:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>600</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2008-03-16T23:00:00</td>\n",
+       "      <td>800</td>\n",
+       "      <td>1600</td>\n",
        "      <td>måndag</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0180 2008-11254</td>\n",
-       "      <td>Maria Skolgata</td>\n",
-       "      <td>Södermalm</td>\n",
-       "      <td>Södermalm</td>\n",
-       "      <td>Tidsreglerat parkerings-/stoppförbud</td>\n",
-       "      <td>Maria Skolgata 36</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0180 2008-01403</td>\n",
+       "      <td>Lännäsbacken</td>\n",
+       "      <td>Rågsved</td>\n",
+       "      <td>&lt;Område saknas&gt;</td>\n",
+       "      <td>Lännäsbacken 5</td>\n",
        "      <td>https://rdt.transportstyrelsen.se/rdt/AF06_Vie...</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>LINESTRING (18.05619 59.31526, 18.05600 59.31524)</td>\n",
+       "      <td>LINESTRING (18.02370 59.25900, 18.02371 59.259...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         id       FID  ...  ODD_EVEN                                           geometry\n",
-       "0  LTFR_SERVICEDAG.31041785  31041785  ...      None  LINESTRING (18.07999 59.26315, 18.07995 59.263...\n",
-       "1  LTFR_SERVICEDAG.31041786  31041786  ...      None  LINESTRING (18.08065 59.26477, 18.08060 59.264...\n",
-       "2  LTFR_SERVICEDAG.31042338  31042338  ...      None  LINESTRING (18.05412 59.31790, 18.05393 59.31788)\n",
-       "3  LTFR_SERVICEDAG.31042341  31042341  ...      None  LINESTRING (18.07632 59.26141, 18.07630 59.261...\n",
-       "4  LTFR_SERVICEDAG.31041799  31041799  ...      None  LINESTRING (18.05619 59.31526, 18.05600 59.31524)\n",
+       "                         id  ...                                           geometry\n",
+       "0  LTFR_SERVICEDAG.31094366  ...  LINESTRING (18.04339 59.26578, 18.04352 59.26587)\n",
+       "1  LTFR_SERVICEDAG.31094367  ...  LINESTRING (18.04324 59.26570, 18.04327 59.265...\n",
+       "2  LTFR_SERVICEDAG.31094562  ...  LINESTRING (18.02351 59.25976, 18.02352 59.259...\n",
+       "3  LTFR_SERVICEDAG.31094563  ...  LINESTRING (18.02361 59.25935, 18.02360 59.259...\n",
+       "4  LTFR_SERVICEDAG.31094564  ...  LINESTRING (18.02370 59.25900, 18.02371 59.259...\n",
        "\n",
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -271,7 +271,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ce60ac9980744028f5c7988a15a2a1e",
+       "model_id": "5a8ab027d1ad4c44b97e28feb4e1cc0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
