--- a/Open Parking Stockholm using Kepler.ipynb
+++ b/Open Parking Stockholm using Kepler.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "## Open Parking Stockholm\n",
-    "https://openstreetgs.stockholm.se/home/Parking"
+    "https://openstreetgs.stockholm.se/home/Parking\n",
+    "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Open%20Parking%20Stockholm%20using%20Kepler.ipynb)"
    ]
   },
   {
