--- a/Svenska Akademin.ipynb
+++ b/Svenska Akademin.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Svenska Akademin  \n",
     "WD egenskap [Property:P5325](https://www.wikidata.org/wiki/Property:P5325) \n",
-    "* this [notebook]()"
+    "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademin.ipynb)"
    ]
   },
   {
