--- a/SKL data.ipynb
+++ b/SKL data.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# SKL \n",
     "Test accessa SKL\n",
-    "* denna [Jupityr Notebook]()\n",
+    "* denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/SKL%20data.ipynb)\n",
     "\n",
     "### Kommunkoder"
    ]
