--- a/SKL data.ipynb
+++ b/SKL data.ipynb
@@ -4,11 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SKL \n",
-    "Test accessa SKL\n",
-    "* denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/SKL%20data.ipynb)\n",
+    "# SKL / SKR\n",
+    "Test accessa SKL / SKR Öppen data från catalog.skl.se / dataportal.se / europeandataporta \n",
+    "* denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/SKL%20data.ipynb) \n",
     "\n",
-    "### Kommunkoder"
+    "Licensen på datat är väldigt otydlig skickat email 2020-06-24 vad som gäller och om det är [CC-0]()\n",
+    "\n",
+    "### Kommunkoder \n",
+    "* [catalog.skl.se/catalog/1/datasets/50](https://catalog.skl.se/catalog/1/datasets/50) \n",
+    "* [www.dataportal.se](https://www.dataportal.se/sv/datasets/653_26835/kommunkoder) \n",
+    "* [www.europeandataportal.eu](https://www.europeandataportal.eu/data/datasets/https-catalog-skl-se-store-1-resource-50?locale=sv)"
    ]
   },
   {
@@ -289,7 +294,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Länskoder"
+    "### Länskoder \n",
+    "* [catalog.skl.se datasets 38](https://catalog.skl.se/catalog/1/datasets/38) \n",
+    "* [dataportal.se datasets/653_26811](https://www.dataportal.se/sv/datasets/653_26811/kontaktuppgifter-till-kommunerna) \n",
+    "* [www.europeandataportal.eu](https://www.europeandataportal.eu/data/datasets/https-catalog-skl-se-store-1-resource-38?locale=sv) \n"
    ]
   },
   {
@@ -549,7 +557,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Kontaktuppgifter Kommun"
+    "## Kontaktuppgifter Kommun \n",
+    "* [catalog.skl.se datasets 38](https://catalog.skl.se/catalog/1/datasets/38) \n",
+    "* [dataportal.se datasets/653_26811](https://www.dataportal.se/sv/datasets/653_26811/kontaktuppgifter-till-kommunerna) \n",
+    "* [www.europeandataportal.eu datasets https-catalog-skl-se-store-1-resource-38](https://www.europeandataportal.eu/data/datasets/https-catalog-skl-se-store-1-resource-38?locale=sv) \n",
+    "* licens?"
    ]
   },
   {
