--- a/SKL data.ipynb
+++ b/SKL data.ipynb
@@ -5,10 +5,11 @@
    "metadata": {},
    "source": [
     "# SKL / SKR\n",
-    "Test accessa SKL / SKR Öppen data från catalog.skl.se / dataportal.se / europeandataporta \n",
+    "Test accessa SKL / SKR Öppen data från catalog.skl.se / dataportal.se / europeandataporta för att skapa bättre data i Wikidata för kommuner [karta](https://w.wiki/V4o)  \n",
+    "\n",
     "* denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/SKL%20data.ipynb) \n",
     "\n",
-    "Licensen på datat är väldigt otydlig skickat email 2020-06-24 vad som gäller och om det är [CC-0]()\n",
+    "Licensen på datat är väldigt otydlig skickat email 2020-06-24 SKR vad som gäller och om det är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) se [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)\n",
     "\n",
     "### Kommunkoder \n",
     "* [catalog.skl.se/catalog/1/datasets/50](https://catalog.skl.se/catalog/1/datasets/50) \n",
@@ -948,11 +949,7 @@
    "source": [
     "url_kommunKontakt = \"https://catalog.skl.se/store/1/resource/262\"\n",
     "c=pd.read_csv(url_kommunKontakt, encoding ='latin1',skiprows = 0,sep=';')\n",
-    "#r_kommunk = http.request('GET', url_kommunKontakt)\n",
-    "c \n",
-    "#data_kommun = unicode(r_kommunk.data, errors='replace')\n",
-    "#df=pd.read_csv(data_kommun)\n",
-    "#dfKommunk = pd.DataFrame(r_kommunk.data)"
+    "c \n"
    ]
   },
   {
@@ -964,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2012,11 +2009,19 @@
     "    sparql.setReturnFormat(JSON)\n",
     "    return sparql.query().convert()\n",
     "\n",
-    "# SPARQL https://w.wiki/V6i\n",
+    "# SPARQL https://w.wiki/V7J\n",
     "results = get_results(endpoint_url, query)\n",
-    "\n",
+    "column_names = [\"WD\", \"Label\", \"Kommunkod\",\"Phone\",\"Email\"]\n",
+    "dfWDKommun = pd.DataFrame(columns = column_names) \n",
+    "    WDresult = \n",
     "for result in results[\"results\"][\"bindings\"]:\n",
     "    print(result[\"itemLabel\"][\"value\"],result[\"item\"][\"value\"],result[\"kommunkod\"][\"value\"]) \n",
+    "     \n",
+    "    dfWDKommun.append({'WD': result[\"item\"][\"value\"], \n",
+    "                       'Label': result[\"itemLabel\"][\"value\"],\n",
+    "                       'Kommunkod' \n",
+    "                      }, ignore_index=True)\n",
+    "\n",
     "    if 'phone' in result:\n",
     "        print (\"\\t\",result[\"phone\"][\"value\"])\n",
     "    else:\n",
@@ -2027,6 +2032,333 @@
     "        print (\"\\t\\tMissing Email\")\n",
     "    \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kontaktuppgifter regioner \n",
+    "* https://catalog.skl.se/catalog/1/datasets/55\n",
+    "* [www.dataportal.se/sv/datasets/653_26843/kontaktuppgifter-till-regioner](https://www.dataportal.se/sv/datasets/653_26843/kontaktuppgifter-till-regioner)  \n",
+    "* [www.europeandataportal.eu](https://www.europeandataportal.eu/data/datasets/https-catalog-skl-se-store-1-resource-55?locale=sv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Läns-/kommunkod</th>\n",
+       "      <th>Namn</th>\n",
+       "      <th>Befolkning</th>\n",
+       "      <th>Webbadress</th>\n",
+       "      <th>E-post</th>\n",
+       "      <th>Telefon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Region Kronoberg</td>\n",
+       "      <td>194628</td>\n",
+       "      <td>http://www.regionkronoberg.se</td>\n",
+       "      <td>region@kronoberg.se</td>\n",
+       "      <td>0470-58 80 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Region Skåne</td>\n",
+       "      <td>1324565</td>\n",
+       "      <td>http://www.skane.se</td>\n",
+       "      <td>region@skane.se</td>\n",
+       "      <td>044-309 30 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Region Blekinge</td>\n",
+       "      <td>158453</td>\n",
+       "      <td>http://www.regionblekinge.se</td>\n",
+       "      <td>region@regionblekinge.se</td>\n",
+       "      <td>0455-73 10 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Region Kalmar län</td>\n",
+       "      <td>242301</td>\n",
+       "      <td>http://www.regionkalmar.se</td>\n",
+       "      <td>region@regionkalmar.se</td>\n",
+       "      <td>0480-840 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Region Jönköpings län</td>\n",
+       "      <td>352735</td>\n",
+       "      <td>http://www.rjl.se</td>\n",
+       "      <td>regionen@rjl.se</td>\n",
+       "      <td>010-241 00 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Region Jämtland Härjedalen</td>\n",
+       "      <td>128673</td>\n",
+       "      <td>http://www.regionjh.se/</td>\n",
+       "      <td>region@regionjh.se</td>\n",
+       "      <td>063-14 75 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Region Uppsala</td>\n",
+       "      <td>361373</td>\n",
+       "      <td>http://www.regionuppsala.se/</td>\n",
+       "      <td>region.uppsala@regionuppsala.se</td>\n",
+       "      <td>018-611 00 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Region Stockholm</td>\n",
+       "      <td>2269060</td>\n",
+       "      <td>http://www.sll.se</td>\n",
+       "      <td>regionstockholm@sll.se</td>\n",
+       "      <td>08-737 25 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Region Östergötland</td>\n",
+       "      <td>452105</td>\n",
+       "      <td>http://www.regionostergotland.se</td>\n",
+       "      <td>region@regionostergotland.se</td>\n",
+       "      <td>010-103 00 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Region Sörmland</td>\n",
+       "      <td>288097</td>\n",
+       "      <td>http://www.regionsormland.se</td>\n",
+       "      <td>post@regionsormland.se</td>\n",
+       "      <td>0155-24 50 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Region Dalarna</td>\n",
+       "      <td>284531</td>\n",
+       "      <td>http://www.regiondalarna.se</td>\n",
+       "      <td>landstinget.dalarna@ltdalarna.se</td>\n",
+       "      <td>023-49 00 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Region Gävleborg</td>\n",
+       "      <td>284586</td>\n",
+       "      <td>http://www.regiongavleborg.se</td>\n",
+       "      <td>rg@regiongavleborg.se</td>\n",
+       "      <td>026-15 40 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Region Västernorrland</td>\n",
+       "      <td>245572</td>\n",
+       "      <td>http://www.rvn.se</td>\n",
+       "      <td>region.vasternorrland@rvn.se</td>\n",
+       "      <td>0611-800 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Region Norrbotten</td>\n",
+       "      <td>250570</td>\n",
+       "      <td>http://www.norrbotten.se</td>\n",
+       "      <td>regionnorrbotten@norrbotten.se</td>\n",
+       "      <td>0920-28 40 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Region Västerbotten</td>\n",
+       "      <td>265881</td>\n",
+       "      <td>http://www.regionvasterbotten.se</td>\n",
+       "      <td>regionen@regionvasterbotten.se</td>\n",
+       "      <td>090-785 00 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Region Halland</td>\n",
+       "      <td>320333</td>\n",
+       "      <td>http://www.regionhalland.se</td>\n",
+       "      <td>regionen@regionhalland.se</td>\n",
+       "      <td>035-13 48 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Region Värmland</td>\n",
+       "      <td>279334</td>\n",
+       "      <td>http://www.regionvarmland.se</td>\n",
+       "      <td>info@regionvarmland.se</td>\n",
+       "      <td>054-61 50 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Region Västmanland</td>\n",
+       "      <td>267629</td>\n",
+       "      <td>http://www.regionvastmanland.se/</td>\n",
+       "      <td>region@regionvastmanland.se</td>\n",
+       "      <td>021-17 30 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Region Örebro län</td>\n",
+       "      <td>294941</td>\n",
+       "      <td>http://www.regionorebrolan.se</td>\n",
+       "      <td>regionen@regionorebrolan.se</td>\n",
+       "      <td>019-602 70 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Region Gotland (region)</td>\n",
+       "      <td>58003</td>\n",
+       "      <td>http://www.gotland.se</td>\n",
+       "      <td>regiongotland@gotland.se</td>\n",
+       "      <td>0498-26 90 00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Västra Götalandsregionen</td>\n",
+       "      <td>1671783</td>\n",
+       "      <td>http://www.vgregion.se</td>\n",
+       "      <td>post@vgregion.se</td>\n",
+       "      <td>010-441 00 00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Läns-/kommunkod                        Namn  Befolkning  \\\n",
+       "0                 7            Region Kronoberg      194628   \n",
+       "1                12                Region Skåne     1324565   \n",
+       "2                10             Region Blekinge      158453   \n",
+       "3                 8           Region Kalmar län      242301   \n",
+       "4                 6       Region Jönköpings län      352735   \n",
+       "5                23  Region Jämtland Härjedalen      128673   \n",
+       "6                 3              Region Uppsala      361373   \n",
+       "7                 1            Region Stockholm     2269060   \n",
+       "8                 5         Region Östergötland      452105   \n",
+       "9                 4             Region Sörmland      288097   \n",
+       "10               20              Region Dalarna      284531   \n",
+       "11               21            Region Gävleborg      284586   \n",
+       "12               22       Region Västernorrland      245572   \n",
+       "13               25           Region Norrbotten      250570   \n",
+       "14               24         Region Västerbotten      265881   \n",
+       "15               13              Region Halland      320333   \n",
+       "16               17             Region Värmland      279334   \n",
+       "17               19          Region Västmanland      267629   \n",
+       "18               18           Region Örebro län      294941   \n",
+       "19                9     Region Gotland (region)       58003   \n",
+       "20               14    Västra Götalandsregionen     1671783   \n",
+       "\n",
+       "                          Webbadress                            E-post  \\\n",
+       "0      http://www.regionkronoberg.se               region@kronoberg.se   \n",
+       "1                http://www.skane.se                   region@skane.se   \n",
+       "2       http://www.regionblekinge.se          region@regionblekinge.se   \n",
+       "3         http://www.regionkalmar.se            region@regionkalmar.se   \n",
+       "4                  http://www.rjl.se                   regionen@rjl.se   \n",
+       "5            http://www.regionjh.se/                region@regionjh.se   \n",
+       "6       http://www.regionuppsala.se/   region.uppsala@regionuppsala.se   \n",
+       "7                  http://www.sll.se            regionstockholm@sll.se   \n",
+       "8   http://www.regionostergotland.se      region@regionostergotland.se   \n",
+       "9       http://www.regionsormland.se            post@regionsormland.se   \n",
+       "10       http://www.regiondalarna.se  landstinget.dalarna@ltdalarna.se   \n",
+       "11     http://www.regiongavleborg.se             rg@regiongavleborg.se   \n",
+       "12                 http://www.rvn.se      region.vasternorrland@rvn.se   \n",
+       "13          http://www.norrbotten.se    regionnorrbotten@norrbotten.se   \n",
+       "14  http://www.regionvasterbotten.se    regionen@regionvasterbotten.se   \n",
+       "15       http://www.regionhalland.se         regionen@regionhalland.se   \n",
+       "16      http://www.regionvarmland.se            info@regionvarmland.se   \n",
+       "17  http://www.regionvastmanland.se/       region@regionvastmanland.se   \n",
+       "18     http://www.regionorebrolan.se       regionen@regionorebrolan.se   \n",
+       "19             http://www.gotland.se          regiongotland@gotland.se   \n",
+       "20            http://www.vgregion.se                  post@vgregion.se   \n",
+       "\n",
+       "          Telefon  \n",
+       "0   0470-58 80 00  \n",
+       "1   044-309 30 00  \n",
+       "2   0455-73 10 00  \n",
+       "3     0480-840 00  \n",
+       "4   010-241 00 00  \n",
+       "5    063-14 75 00  \n",
+       "6   018-611 00 00  \n",
+       "7    08-737 25 00  \n",
+       "8   010-103 00 00  \n",
+       "9   0155-24 50 00  \n",
+       "10   023-49 00 00  \n",
+       "11   026-15 40 00  \n",
+       "12    0611-800 00  \n",
+       "13  0920-28 40 00  \n",
+       "14  090-785 00 00  \n",
+       "15   035-13 48 00  \n",
+       "16   054-61 50 00  \n",
+       "17   021-17 30 00  \n",
+       "18  019-602 70 00  \n",
+       "19  0498-26 90 00  \n",
+       "20  010-441 00 00  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url_regionKontakt = \"https://catalog.skl.se/store/1/resource/252\"\n",
+    "region=pd.read_csv(url_regionKontakt, encoding ='latin1',skiprows = 0,sep=';')\n",
+    "region\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wikidata "
    ]
   },
   {
