--- a/SKL data.ipynb
+++ b/SKL data.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "# SKL / SKR\n",
-    "Test accessa SKL / SKR Öppen data från catalog.skl.se / dataportal.se / europeandataporta för att skapa bättre data i Wikidata för kommuner [karta](https://w.wiki/V4o)  \n",
+    "Test accessa SKL / SKR Öppen data från [catalog.skl.se](https://catalog.skl.se/rowstore/dataset/03c90666-e53c-49af-bde1-8336fc59dff6/html) / [dataportal.se](https://www.dataportal.se) / [europeandataportal](https://www.europeandataportal.eu) för att skapa bättre data i Wikidata för kommuner se [karta](https://w.wiki/V4o) med data vi har idag  \n",
     "\n",
     "* denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/SKL%20data.ipynb) \n",
     "\n",
-    "Licensen på datat är väldigt otydlig skickat email 2020-06-24 SKR vad som gäller och om det är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) se [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)\n",
+    "Licensen på datat är väldigt otydlig skickat email 2020-06-24 SKR vad som gäller och om det är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) se krav för att kunna vara del av Wikipedia [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)\n",
     "\n",
     "### Kommunkoder \n",
     "* [catalog.skl.se/catalog/1/datasets/50](https://catalog.skl.se/catalog/1/datasets/50) \n",
