--- a/SKL data.ipynb
+++ b/SKL data.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "* denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/SKL%20data.ipynb) \n",
     "\n",
-    "Licensen på datat är väldigt otydlig skickat email 2020-06-24 SKR vad som gäller och om det är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) se krav för att kunna vara del av Wikipedia [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)  \n"
+    "Licensen på datat är väldigt otydlig skickat email 2020-06-24 SKR vad som gäller och om det är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) se krav för att kunna vara del av Wikipedia \n",
+    "* [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)  \n",
+    "* video [Creative Commons licences explained](https://www.youtube.com/watch?v=AeTlXtEOplA)\n"
    ]
   },
   {
