--- a/SKL data.ipynb
+++ b/SKL data.ipynb
@@ -9,9 +9,14 @@
     "\n",
     "* denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/SKL%20data.ipynb) \n",
     "\n",
-    "Licensen på datat är väldigt otydlig skickat email 2020-06-24 SKR vad som gäller och om det är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) se krav för att kunna vara del av Wikipedia \n",
-    "* [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)  \n",
-    "* video [Creative Commons licences explained](https://www.youtube.com/watch?v=AeTlXtEOplA)\n"
+    "Licensen på datat är väldigt otydlig från SKR skickat email 2020-06-24 SKR vad som gäller och om det är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) se krav för att kunna vara del av Wikipedia/Wikidata  \n",
+    "* [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)   \n",
+    "* [Wikipedia:Att återanvända material från Wikipedia](https://sv.wikipedia.org/wiki/Wikipedia:Att_%C3%A5teranv%C3%A4nda_material_fr%C3%A5n_Wikipedia)\n",
+    "* video [Creative Commons licences explained](https://www.youtube.com/watch?v=AeTlXtEOplA)  \n",
+    "\n",
+    "Det enda om licens på SKR datat jag hittat var\n",
+    "* [www.europeandataportal.eu](https://www.europeandataportal.eu/data/datasets/https-catalog-skl-se-store-1-resource-50?locale=sv) där det står \"Licens ej angiven\"  \n",
+    "* [www.dataportalen.se](https://www.dataportal.se/sv/datasets/653_26835/kommunkoder) står inget endast \"Åtkomsträttigheter Publik\"\n"
    ]
   },
   {
