--- a/SKL data.ipynb
+++ b/SKL data.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# SKL / SKR\n",
     "\n",
-    "*Lesson learned:* SKR har bara laddat upp test data för något år sedan och verkar inte driva Öppen data och har inte satt licens... --> går *ej att använda* på WIkipedia Wikidata \n",
+    "*Lesson learned:* SKR har bara laddat upp test data för något år sedan och verkar inte driva Öppen data och har inte satt licens... --> går *ej att använda* på Wikipedia Wikidata \n",
     "\n",
-    "--- \n",
+    "---- \n",
     "\n",
     "Test accessa SKL / SKR Öppen data från [catalog.skl.se](https://catalog.skl.se/rowstore/dataset/03c90666-e53c-49af-bde1-8336fc59dff6/html) / [dataportal.se](https://www.dataportal.se) / [europeandataportal](https://www.europeandataportal.eu) för att skapa bättre data i Wikidata för kommuner se [karta](https://w.wiki/V4o) med data vi har idag  \n",
     "\n",
