--- a/Europeandataporta.ipynb
+++ b/Europeandataporta.ipynb
@@ -10,11 +10,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "{'link': [], 'vars': ['s', 'p', 'o']}\n",
+      "link\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-57-0b0ff148fdac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_sparql_dataframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mendpoint_url\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-57-0b0ff148fdac>\u001b[0m in \u001b[0;36mget_sparql_dataframe\u001b[0;34m(endpoint_url, query)\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcols\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m             \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'value'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'get'"
+     ]
+    }
+   ],
    "source": [
-    "import sys\n",
+    "import sys,json\n",
+    "import pandas as pd\n",
     "from SPARQLWrapper import SPARQLWrapper, JSON\n",
     "endpoint_url = \"https://www.europeandataportal.eu/sparql\"\n",
     "\n",
@@ -25,27 +48,27 @@
     "\n",
     "\n",
     "def get_sparql_dataframe(endpoint_url, query):\n",
-    "    print (query)\n",
+    "    # print (query)\n",
     "    user_agent = \"user: salgo60/%s.%s\" % (sys.version_info[0], sys.version_info[1])\n",
-    "    # TODO adjust user agent; see https://w.wiki/CX6\n",
     "    sparql = SPARQLWrapper(endpoint_url, agent=user_agent)\n",
     "    sparql.setQuery(query)\n",
     "    sparql.setReturnFormat(JSON)\n",
-    "    return sparql.query().convert()\n",
-    "\n",
-    "    processed_results = json.(endpoint_url, query) \n",
+    "    result = sparql.query().convert()\n",
+    "    print(type(result))\n",
+    "    #print(results)\n",
     "    column_names = [\"s\", \"p\", \"q\"]\n",
-    "    cols = processed_results['head']['vars'] \n",
+    "    cols = results[\"head\"]\n",
     "    out = [] \n",
-    "    print (out)\n",
-    "    for row in processed_results['results']['bindings']:\n",
+    "    for row in processed_results['head']:\n",
     "        item = [] \n",
+    "        print (cols)\n",
     "        for c in cols: \n",
+    "            print(row)\n",
     "            item.append(row.get(c, {}).get('value'))\n",
     "        \n",
     "        out.append(item) \n",
-    "    print (\"Hej\")\n",
-    "    return pd.DataFrame(out, columns=cols) \n",
+    "    return pd.DataFrame(out, columns=cols)\n",
+    "\n",
     "df = get_sparql_dataframe(endpoint_url, query) \n",
     "\n"
    ]
@@ -63,11 +86,7 @@
      ]
     }
    ],
-   "source": [
-    "  \n",
-    "df = get_sparql_dataframe(endpoint_url, query) \n",
-    "print (type(df))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
